--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dom": "0.0.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "router": "^1.3.3",
     "uuid": "^3.3.2"
